{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 162,
  "lineage": "66f30ef2-fcbc-1879-de04-92f48fe1af2c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:loadbalancer/app/prod-alb/aca75fb2f24b83e1",
            "arn_suffix": "app/prod-alb/aca75fb2f24b83e1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-alb-1909268316.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:loadbalancer/app/prod-alb/aca75fb2f24b83e1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-alb",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-0bf0e8cf7001f3ae4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d44f151be153eb1"
              },
              {
                "subnet_id": "subnet-0ccd337cd317aee96"
              }
            ],
            "subnets": [
              "subnet-01d44f151be153eb1",
              "subnet-0ccd337cd317aee96"
            ],
            "tags": {
              "Name": "prod-alb"
            },
            "tags_all": {
              "Name": "prod-alb"
            },
            "vpc_id": "vpc-08ca405cb1ec9d19c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:listener/app/prod-alb/aca75fb2f24b83e1/3036777e86042617",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:targetgroup/prod-tg/be2ef2d0fe22253a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:listener/app/prod-alb/aca75fb2f24b83e1/3036777e86042617",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:loadbalancer/app/prod-alb/aca75fb2f24b83e1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.alb.aws_lb_target_group.app_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:targetgroup/prod-tg/be2ef2d0fe22253a",
            "arn_suffix": "targetgroup/prod-tg/be2ef2d0fe22253a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:targetgroup/prod-tg/be2ef2d0fe22253a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "prod-tg"
            },
            "tags_all": {
              "Name": "prod-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "dependencies": [
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:security-group/sg-0bf0e8cf7001f3ae4",
            "description": "Allow HTTP access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf0e8cf7001f3ae4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "602320713474",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0841b1152f02fa85e",
            "arn": "arn:aws:ec2:eu-west-2:602320713474:instance/i-00cab87f813e380a3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cab87f813e380a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f9b502489b4e942",
            "private_dns": "ip-10-0-11-48.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.48",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b1aff0ebd5edcfae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5d9ab8a6b08fc6d",
            "tags": {
              "Name": "prod-web-1"
            },
            "tags_all": {
              "Name": "prod-web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069799a9e346b1fc4"
            ]
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.compute.aws_security_group.ec2_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0841b1152f02fa85e",
            "arn": "arn:aws:ec2:eu-west-2:602320713474:instance/i-0acbdc27f0e1e5a31",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0acbdc27f0e1e5a31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0adb4c26542e55a1b",
            "private_dns": "ip-10-0-12-128.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.128",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fe2b564d36252465",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07103348efd7df4dd",
            "tags": {
              "Name": "prod-web-2"
            },
            "tags_all": {
              "Name": "prod-web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069799a9e346b1fc4"
            ]
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.compute.aws_security_group.ec2_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:targetgroup/prod-tg/be2ef2d0fe22253a-20250718142415066400000007",
            "port": 80,
            "region": "eu-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:targetgroup/prod-tg/be2ef2d0fe22253a",
            "target_id": "i-00cab87f813e380a3"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.app_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.compute.aws_instance.web",
            "module.compute.aws_security_group.ec2_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:targetgroup/prod-tg/be2ef2d0fe22253a-20250718142414944200000006",
            "port": 80,
            "region": "eu-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:602320713474:targetgroup/prod-tg/be2ef2d0fe22253a",
            "target_id": "i-0acbdc27f0e1e5a31"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.app_tg",
            "module.alb.aws_security_group.alb_sg",
            "module.compute.aws_instance.web",
            "module.compute.aws_security_group.ec2_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:security-group/sg-069799a9e346b1fc4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069799a9e346b1fc4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bf0e8cf7001f3ae4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-ec2-sg",
            "name_prefix": "",
            "owner_id": "602320713474",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-ec2-sg"
            },
            "tags_all": {
              "Name": "prod-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052af4a68014560fa",
            "arn": "arn:aws:ec2:eu-west-2:602320713474:elastic-ip/eipalloc-052af4a68014560fa",
            "domain": "vpc",
            "id": "eipalloc-052af4a68014560fa",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-35-178-74-26.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.74.26",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0892350c86b2d0e42",
            "arn": "arn:aws:ec2:eu-west-2:602320713474:elastic-ip/eipalloc-0892350c86b2d0e42",
            "domain": "vpc",
            "id": "eipalloc-0892350c86b2d0e42",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-35-177-180-50.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.180.50",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:internet-gateway/igw-009f3e24aae10d7c7",
            "id": "igw-009f3e24aae10d7c7",
            "owner_id": "602320713474",
            "region": "eu-west-2",
            "tags": {
              "Name": "web-app-igw"
            },
            "tags_all": {
              "Name": "web-app-igw"
            },
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "dependencies": [
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052af4a68014560fa",
            "association_id": "eipassoc-08395d8e51839a777",
            "connectivity_type": "public",
            "id": "nat-002fa47b968db4f5a",
            "network_interface_id": "eni-0bf529a31381ab1e4",
            "private_ip": "10.0.1.85",
            "public_ip": "35.178.74.26",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d44f151be153eb1",
            "tags": {
              "Name": "nat-gateway-eu-west-2a"
            },
            "tags_all": {
              "Name": "nat-gateway-eu-west-2a"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0892350c86b2d0e42",
            "association_id": "eipassoc-08356cd424b71fe0b",
            "connectivity_type": "public",
            "id": "nat-003f4af0913c94f02",
            "network_interface_id": "eni-0db3cfbd54d97e746",
            "private_ip": "10.0.2.153",
            "public_ip": "35.177.180.50",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ccd337cd317aee96",
            "tags": {
              "Name": "nat-gateway-eu-west-2b"
            },
            "tags_all": {
              "Name": "nat-gateway-eu-west-2b"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:route-table/rtb-0a5d82bae8c18c2c4",
            "id": "rtb-0a5d82bae8c18c2c4",
            "owner_id": "602320713474",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-002fa47b968db4f5a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-eu-west-2a"
            },
            "tags_all": {
              "Name": "private-rt-eu-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:route-table/rtb-082ba8d06aa9b5220",
            "id": "rtb-082ba8d06aa9b5220",
            "owner_id": "602320713474",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-003f4af0913c94f02",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-eu-west-2b"
            },
            "tags_all": {
              "Name": "private-rt-eu-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:route-table/rtb-0adff2aeb5867b93b",
            "id": "rtb-0adff2aeb5867b93b",
            "owner_id": "602320713474",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009f3e24aae10d7c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7c75871c57c3267",
            "region": "eu-west-2",
            "route_table_id": "rtb-0a5d82bae8c18c2c4",
            "subnet_id": "subnet-0c5d9ab8a6b08fc6d"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac503a8fee3a5304",
            "region": "eu-west-2",
            "route_table_id": "rtb-082ba8d06aa9b5220",
            "subnet_id": "subnet-07103348efd7df4dd"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0008037b8f6b1683a",
            "region": "eu-west-2",
            "route_table_id": "rtb-0adff2aeb5867b93b",
            "subnet_id": "subnet-01d44f151be153eb1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097f847a420fc07ad",
            "region": "eu-west-2",
            "route_table_id": "rtb-0adff2aeb5867b93b",
            "subnet_id": "subnet-0ccd337cd317aee96"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:subnet/subnet-0c5d9ab8a6b08fc6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5d9ab8a6b08fc6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602320713474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "private-subnet-eu-west-2a",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "private-subnet-eu-west-2a",
              "Tier": "private"
            },
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "dependencies": [
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:subnet/subnet-07103348efd7df4dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07103348efd7df4dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602320713474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "private-subnet-eu-west-2b",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "private-subnet-eu-west-2b",
              "Tier": "private"
            },
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "dependencies": [
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:subnet/subnet-01d44f151be153eb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d44f151be153eb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "602320713474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-eu-west-2a",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "public-subnet-eu-west-2a",
              "Tier": "public"
            },
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "dependencies": [
            "module.network.aws_vpc.web-app"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:subnet/subnet-0ccd337cd317aee96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccd337cd317aee96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "602320713474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-eu-west-2b",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "public-subnet-eu-west-2b",
              "Tier": "public"
            },
            "vpc_id": "vpc-08ca405cb1ec9d19c"
          },
          "dependencies": [
            "module.network.aws_vpc.web-app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:602320713474:vpc/vpc-08ca405cb1ec9d19c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00114388b462c2d54",
            "default_route_table_id": "rtb-0b7b958224169c1ad",
            "default_security_group_id": "sg-0d61c2dd082ab0878",
            "dhcp_options_id": "dopt-07bce1186db63d93d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ca405cb1ec9d19c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7b958224169c1ad",
            "owner_id": "602320713474",
            "region": "eu-west-2",
            "tags": {
              "Name": "web-app"
            },
            "tags_all": {
              "Name": "web-app"
            }
          }
        }
      ]
    }
  ]
}